tests/ui/rand_random.stderr
error: nondeterministic workflow API detected; use durust::side_effect(...).await instead
 --> tests/ui/rand_random.rs:2:10
  |
2 | async fn bad(_: ()) -> durust::Result<()> {
  |          ^^^
